--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,62 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+.InfoRow{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: small;
+  margin-bottom: 0;
+}
+
+.Category {
+  font-size: 15px;
+  font-weight: bold;
+  color: #ffe180;
+}
+
+.Rating {
+  font-size: small;
+  color: #ffe180;
+}
+
+h2.BusinessName {
+  text-align: left;
+  font-size: large;
+  margin: 0;
+  padding-top: 10px;
+}
+
+.BusinessImg {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.BusinessContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 1em;
+  border-radius: 15px;
+  background-color: #333333;
+  color: #ffffff;
+  width: 250px;
+  height: auto;
+  margin: 10 px;
+}
+
+.BusinessListContainer {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.BusinessListContainer > * {
+  flex: 0 0 auto; /* don’t grow or shrink, keep natural size */
+  margin-bottom: 16px;
+}
+
